reports/c9examples.err.log
Traceback (most recent call last):
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/dsmith4/anaconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
E0 = 938
KE = np.arange(0,1.0e5,1.0e3
beta = np.sqrt(KE/(KE+2.0*E0))
gam = 1.0/np.sqrt(1-beta**2)
Elab = 2.0*E0+KE
pi = np.sqrt(KE**2+2.0*E0*KE)
Ecom = gam*(Elab-beta*pi)
plt.figure(figsize=(9,5))
plt.plot(KE,Ecom,'b-')
plt.xlabel('Kinetic Energy of Incident Particle (MeV)')
plt.ylabel('Total Energy in COM Frame')
plt.show()
------------------

[0;36m  Cell [0;32mIn[2], line 2[0;36m[0m
[0;31m    KE = np.arange(0,1.0e5,1.0e3[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m '(' was never closed

SyntaxError: '(' was never closed (4267270883.py, line 2)

